veskim-sfdx/force-app/main/default/objects/Opportunity/fields/Competitor_Info__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Info__c</fullName>
    <description>Competing company information present in the market for this opportunity.</description>
    <label>Competitor Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>