veskim-sfdx/force-app/main/default/objects/Opportunity/fields/Related_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Group__c</fullName>
    <description>Veskim product group distinction for this opportunity (Main Chemical / Auxiliary Chemical).</description>
    <label>Related Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Chemical</fullName>
            </value>
            <value>
                <fullName>Auxiliary Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>